--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
+    "dev": "tsc-watch --onSuccess \"node dist/index.js\"",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +21,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "ioredis": "^5.4.1"
+    "dotenv": "^16.4.7",
+    "ioredis": "^5.4.1",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "tsc-watch": "^6.2.1"
   }
 }
