--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
       "module": "commonjs",
       "outDir": "./dist",
       "strict": true,
+      "allowJs": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "src/tests/cart.test.ts"],
     "exclude": ["node_modules"]
   }
